--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Run tests 🧪
         run: npm run test
 
+      - name: Build
+        run: npm run generate
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
