--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "eslint": "^7.18.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.5.0",
+    "fibers": "^5.0.0",
     "jest": "^26.6.3",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "ts-jest": "^26.5.0",
     "vue-jest": "^3.0.4"
   }
